--- a/css/utility.css
+++ b/css/utility.css
@@ -1,189 +1,235 @@
-.container{
+.container {
     max-width: 1100px;
     margin: 0 auto;
-    overflow: auto; /* If we do't Write this line of code nav bar will remain down because of line height */
-    padding: 0 40px;   
- }
- .btn{
-    
+    overflow: auto;
+    padding: 0 40px;
+  }
+  
+  .card {
+    background-color: #fff;
+    color: #333;
+    border-radius: 10px;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    margin: 10px;
+  }
+  
+  .btn {
+    display: inline-block;
     padding: 10px 30px;
     cursor: pointer;
-    background-color: var(--primary-color);
+    background: var(--primary-color);
     color: #fff;
     border: none;
     border-radius: 5px;
-}
-/* Card */
-.card{
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 3px 20px rgba(0, 0, 0, 0.2);
-    padding: 20px;
-    margin: 10px;
-    color: var(--secondary-color);
- }
- .btn:hover{
-    transform: scale(0.98);
-}
-.btn-outline{
+  }
+  
+  .btn-outline {
     background-color: transparent;
-    border: 1px solid #fff!important; 
-}
-.grid{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-gap: 20px;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-}
-.flex{
+    border: 1px #fff solid;
+  }
+  
+  .btn:hover {
+    transform: scale(0.98);
+  }
+  
+  /* Backgrounds & colored buttons */
+  .bg-primary,
+  .btn-primary {
+    background-color: var(--primary-color);
+    color: #fff;
+  }
+  
+  .bg-secondary,
+  .btn-secondary {
+    background-color: var(--secondary-color);
+    color: #fff;
+  }
+  
+  .bg-dark,
+  .btn-dark {
+    background-color: var(--dark-color);
+    color: #fff;
+  }
+  
+  .bg-light,
+  .btn-light {
+    background-color: var(--light-color);
+    color: #333;
+  }
+  
+  .bg-primary a,
+  .btn-primary a,
+  .bg-secondary a,
+  .btn-secondary a,
+  .bg-dark a,
+  .btn-dark a {
+    color: #fff;
+  }
+  
+  /* Text colors */
+  .text-primary {
+    color: var(--primary-color);
+  }
+  
+  .text-secondary {
+    color: var(--secondary-color);
+  }
+  
+  .text-dark {
+    color: var(--dark-color);
+  }
+  
+  .text-light {
+    color: var(--light-color);
+  }
+  
+  /* Text sizes */
+  .lead {
+    font-size: 20px;
+  }
+  
+  .sm {
+    font-size: 1rem;
+  }
+  
+  .md {
+    font-size: 2rem;
+  }
+  
+  .lg {
+    font-size: 3rem;
+  }
+  
+  .xl {
+    font-size: 4rem;
+  }
+  
+  .text-center {
+    text-align: center;
+  }
+  
+  /* Alert */
+  .alert {
+    background-color: var(--light-color);
+    padding: 10px 20px;
+    font-weight: bold;
+    margin: 15px 0;
+  }
+  
+  .alert i {
+    margin-right: 10px;
+  }
+  
+  .alert-success {
+    background-color: var(--success-color);
+    color: #fff;
+  }
+  
+  .alert-error {
+    background-color: var(--error-color);
+    color: #fff;
+  }
+  
+  .flex {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100%;
- }
- .grid-3{
-    grid-template-columns: repeat(3,1fr);
-    justify-content: flex-end;
-}
-.text-center{
-    text-align: center;
-}
-/* Margin */
-.my-1{
+  }
+  
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  }
+  
+  .grid-3 {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  
+  /* Margin */
+  .my-1 {
     margin: 1rem 0;
-}
-.my-2{
+  }
+  
+  .my-2 {
     margin: 1.5rem 0;
-}
-.my-3{
+  }
+  
+  .my-3 {
     margin: 2rem 0;
-}
-.my-4{
+  }
+  
+  .my-4 {
     margin: 3rem 0;
-}
-.my-5{
+  }
+  
+  .my-5 {
     margin: 4rem 0;
-}
-.m-1{
-    margin: 1rem ;
-}
-.m-2{
+  }
+  
+  .m-1 {
+    margin: 1rem;
+  }
+  
+  .m-2 {
     margin: 1.5rem;
-}
-.m-3{
-    margin: 2rem ;
-}
-.m-4{
-    margin: 3rem ;
-}
-.m-5{
-    margin: 4rem ;
-}
-/* Padding */
-.py-1{
+  }
+  
+  .m-3 {
+    margin: 2rem;
+  }
+  
+  .m-4 {
+    margin: 3rem;
+  }
+  
+  .m-5 {
+    margin: 4rem;
+  }
+  
+  /* Padding */
+  .py-1 {
     padding: 1rem 0;
-}
-.py-2{
+  }
+  
+  .py-2 {
     padding: 1.5rem 0;
-}
-.py-3{
+  }
+  
+  .py-3 {
     padding: 2rem 0;
-}
-.py-4{
+  }
+  
+  .py-4 {
     padding: 3rem 0;
-}
-.py-5{
-    padding: 4rem;
-}
-.p-1{
+  }
+  
+  .py-5 {
+    padding: 4rem 0;
+  }
+  
+  .p-1 {
     padding: 1rem;
-}
-.p-2{
+  }
+  
+  .p-2 {
     padding: 1.5rem;
-}
-.p-3{
+  }
+  
+  .p-3 {
     padding: 2rem;
-}
-.p-4{
+  }
+  
+  .p-4 {
     padding: 3rem;
-}
-.p-5{
+  }
+  
+  .p-5 {
     padding: 4rem;
-}
-/* stats */
-.stats{
-    padding-top: 100px;
-}
-.states-heading{
-    max-width: 500px;
-    margin: 0 auto;
-}
-.cli .grid{
-    grid-template-columns: repeat(3,1fr);
-    grid-template-rows: repeat(2,1fr);
-}
-.cli .grid>*:first-child{
-    grid-column: 1/span 2;
-    grid-row:auto/span 2
-}
-/* Footer  */
-footer{
-    width: 100%;
-    /* position: absolute;
-    bottom:0; */
-    background: linear-gradient(to right #00093c,#2d0b00);
-    color: #fff;
-    padding: 100px 0 30px;
-    border-top-left-radius:125px ;
-}
-/* Cloud */
-.grid .cloud{
-    grid-template-columns: 4fr 3fr;
-}
-/*Background & coloured button */
-.bg-primary, .btn-primary{
-    background-color: var(--primary-color);
-    color: #fff;
-}
-.bg-secondary,
- .btn-secondary{
-    background-color: var(--super-color);
-    color: #fff;
-}
-.bg-dark,
- .btn-dark{
-    background-color: var(--dark-color);
-    color: #fff;
-}
-.bg-light,
- .btn-light{
-    background-color: var(--light-color);
-    color: #333;
-}
-.bg-primary a, 
-.btn-primary a,
-.bg-secondary a,
- .btn-secondary a,
- .bg-dark a,
- .btn-dark a{
-    color:#fff;
- }
-/* text size */
-.lead{
-    font-size: 20px;
-
-}
-.sm{
-    font-size: 1rem;
-}
-.md{
-    font-size: 2rem;
-}
-.lg{
-    font-size: 3rem;
-}
-.xl{
-    font-size: 4rem;
-}
+  }
+  
